# titan_prj

./: .gitignore  SConstruct  camerad日志分析  config.py  gyro_delay.xml  nvidia@192.168.2.210  push_bin2dev.py  push_pro2_service_device.sh  update_util.cpp
Pro2_OSC/: CHANGES.txt  PKG-INFO  README.txt  setup.py
bootan/: SConscript  bootan.cpp
doc/: git命令集
extlib/: alsa-utils-1.1.7.tar.bz2  nvhost_panic
factory_test/: factory_test  top_usb.test.sh  产测.txt
fm1388/: errorcode.h  fm_wav.c  fm_wav.h  libFM1388Parameter.c  libFM1388Parameter.h  libfm1388.c  libfm1388.h  libfmrec.c  libfmrec.h
http_file/: CMakeLists.txt  SConscript  mongoose.cpp  mongoose.h  simplest_web_server.cpp
http_server/: CoreServer.cpp  CoreServer.h  SConscript  http_client.cpp  http_client.h  http_util.cpp  http_util.h  osc_info.h  simplest_web_test.cpp
init/: SConscript  builtins.c  init.h  init_parser.c  log.h  property_service.c  property_service.h  signal_handler.c  util.c  util.h
kern_log/: SConscript  getKernLog.cpp
logcat/: Makefile  logcat.cpp
logd/: LogBuffer.cpp  LogListener.cpp  LogStatistics.cpp  LogWhiteBlackList.cpp  main.cpp
misc/: 1.reg  2.reg  Titan_v1.1硬件及软件修改.txt  Visual_code_shortkey.txt  bq40z50.c  factory.json  hardware_init.sh  init.rc  net_cfg.json  pwm_fan.c  titan调试记录  user_cfg.json  各版本提交记录.txt  工作记录.txt  问题记录.txt
system_server/: AudioManager.cpp  CfgManager.cpp  HardwareService.cpp  InputManager.cpp  MenuUI.cpp  NetManager.cpp  NetlinkEvent.cpp  NetlinkHandler.cpp  NetlinkManager.cpp  NetworkManager.cpp  ProtoManager.cpp  SConscript  SD卡挂载专题.txt  导出配置  (+11 more)
(+655 files in other folders)
